testArea/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  selector:
    app: my-app
  ports:
    - port: 8080
      targetPort: 4500
  type: LoadBalancer
